--- a/src/app/dashboard/components/header/header.component.html
+++ b/src/app/dashboard/components/header/header.component.html
@@ -8,12 +8,14 @@
             <a class="nav-link px-3" href="#">Sign out</a>
         </div>
     </div> -->
-    <div class="dropdown">
+    <div class="dropdown" *ngIf="user">
         <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-          Hello @Blah blah
+          Hello {{ user.email }}
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+            <li>
+                <button class="dropdown-item" (click)="logout()">Cerrar sesión</button>
+            </li>
         </ul>
     </div>
 </header>
