Módulo de usuarios terminado v1

--- a/src/app/dashboard/components/header/header.component.html
+++ b/src/app/dashboard/components/header/header.component.html
@@ -8,7 +8,7 @@
             <a class="nav-link px-3" href="#">Sign out</a>
         </div>
     </div> -->
-    <div class="dropdown" *ngIf="user">
+    <!-- <div class="dropdown" *ngIf="user">
         <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
           Hello {{ user.email }}
         </button>
@@ -17,5 +17,5 @@
                 <button class="dropdown-item" (click)="logout()">Cerrar sesión</button>
             </li>
         </ul>
-    </div>
+    </div> -->
 </header>
