--- a/src/app/dashboard/components/sidenav/sidenav.component.html
+++ b/src/app/dashboard/components/sidenav/sidenav.component.html
@@ -1,36 +1,22 @@
-<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-    <div class="position-sticky pt-3">
-        <ul class="nav nav-pills flex-column mb-auto">
-            <li class="nav-item" *ngFor="let route of routes">
-                <a [routerLink]="route.path" routerLinkActive="active" class="nav-link">
-                    <i [class]="route.faIcon"></i>{{ route.text }}
-                </a>
+<!-- <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"> -->
+<div class="position-sticky pt-3">
+    <ul class="nav nav-pills flex-column mb-auto">
+        <li class="nav-item" *ngFor="let route of routes">
+            <a [routerLink]="route.path" routerLinkActive="active" class="nav-link">
+                <i [class]="route.faIcon"></i>{{ route.text }}
+            </a>
+        </li>
+    </ul>
+    <hr>
+    <div class="dropdown" *ngIf="user">
+        <a href="#" class="nav-link text-truncate text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fas fa-user me-2"></i> {{ user.email }}
+        </a>
+        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+            <li>
+                <button class="dropdown-item" (click)="logout()">Cerrar Sesión</button>
             </li>
-            <!-- <li class="nav-item">
-                <a href="#" class="nav-link active" aria-current="page">
-                     Home
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                     Dashboard
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                     Orders
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                     Products
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    Customers
-                </a>
-            </li> -->
         </ul>
     </div>
-</nav>
+</div>
+<!-- </nav> -->
