--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -19,7 +19,7 @@
                                     </div>
                                 </div>
                                 <div class=" form-group mb-3">
-                                    <input type="password" placeholder="Conraseña" class="form-control shadow-sm" [class.is-invalid]="isContrasenaValid" formControlName="contrasena">
+                                    <input type="password" placeholder="Contraseña" class="form-control shadow-sm" [class.is-invalid]="isContrasenaValid" formControlName="contrasena">
                                     <div class="invalid-feedback" *ngIf="isContrasenaValid">
                                         {{ getErrorMessage('contrasena') }}
                                     </div>
