--- a/src/app/materiales/pages/material-main/material-main.component.html
+++ b/src/app/materiales/pages/material-main/material-main.component.html
@@ -1,4 +1,4 @@
-<div class="row mb-3">
+<div class="row mb-3" *appUserHasRole="['1', '2']">
     <div class="col-md-12">
         <div class="btn-toolbar" role="toolbar">
             <div class="btn-group" role="group" aria-label="First group">
