--- a/src/app/marcas/pages/marca-main/marca-main.component.html
+++ b/src/app/marcas/pages/marca-main/marca-main.component.html
@@ -1,4 +1,4 @@
-<div class="row mb-3">
+<div class="row mb-3" *appUserHasRole="[1, 2]">
     <div class="col-md-12">
         <div class="btn-toolbar" role="toolbar">
             <div class="btn-group" role="group" aria-label="First group">
@@ -9,7 +9,7 @@
         </div>
     </div>
 </div>
-<div class="table-responsive">
+<div class="table-responsive" *appUserHasRole="[1, 2]">
     <table datatable [dtOptions]="dtOptions" class="row-border hover table w-100">
         <thead>
             <tr>
@@ -47,6 +47,32 @@
         </tbody>
     </table>
 </div>
+
+<div class="table-responsive" *appUserHasRole="[3]">
+    <table datatable [dtOptions]="dtOptions" class="row-border hover table w-100">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Nombre</th>
+                <th>Descripción</th>
+            </tr>
+        </thead>
+        <tbody *ngIf="marcas.length !== 0">
+            <tr *ngFor="let marca of marcas; let i = index;">
+                <td> {{ i + 1 }} </td>
+                <td>{{ marca.nombre }}</td>
+                <td>{{ marca.descripcion }}</td>
+            </tr>
+        </tbody>
+        <tbody *ngIf="marcas.length === 0">
+            <tr>
+                <td colspan="3" class="no-data-available">No data!</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+
 <!-- Modal -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
