--- a/src/app/materiales/pages/material-main/material-main.component.html
+++ b/src/app/materiales/pages/material-main/material-main.component.html
@@ -1,4 +1,4 @@
-<div class="row mb-3" *appUserHasRole="['1', '2']">
+<div class="row mb-3" *appUserHasRole="[1, 2]">
     <div class="col-md-12">
         <div class="btn-toolbar" role="toolbar">
             <div class="btn-group" role="group" aria-label="First group">
@@ -9,7 +9,7 @@
         </div>
     </div>
 </div>
-<div class="table-responsive">
+<div class="table-responsive" *appUserHasRole="[1, 2]">
     <table datatable [dtOptions]="dtOptions" class="row-border hover table w-100">
         <thead>
             <tr>
@@ -52,6 +52,44 @@
                         </div>
                     </div>
                 </td>
+            </tr>
+        </tbody>
+        <tbody *ngIf="materiales.length === 0">
+            <tr>
+                <td colspan="3" class="no-data-available">No data!</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="table-responsive" *appUserHasRole="[3]">
+    <table datatable [dtOptions]="dtOptions" class="row-border hover table w-100">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Capacidad o tamaño</th>
+                <th>Cantidad</th>
+                <th>Clasificación</th>
+                <th>Fecha Ingreso</th>
+                <th>Unidad de Medida</th>
+                <th>Marca</th>
+                <th>Tipo de Material</th>
+                <th>Ubicación</th>
+            </tr>
+        </thead>
+        <tbody *ngIf="materiales.length !== 0">
+            <tr *ngFor="let material of materiales; let i = index;">
+                <td>
+                    <a [routerLink]="['/dashboard/materiales/detail/', material.id]">{{ material.nombre }}</a>
+                </td>
+                <td>{{ material.capacidadTamanio }}</td>
+                <td>{{ material.cantidad }}</td>
+                <td>{{ material.clasificacion }}</td>
+                <td>{{ material.fechaIngreso | date }}</td>
+                <td>{{ material.unidadMedida.nombre }}</td>
+                <td>{{ material.marca.nombre }}</td>
+                <td>{{ material.tipoMaterial.nombre }}</td>
+                <td> A{{ material.ubicacion.anaquel }}N{{ material.ubicacion.nivel }}</td>
             </tr>
         </tbody>
         <tbody *ngIf="materiales.length === 0">
