--- a/src/app/ubicaciones/pages/ubicacion-main/ubicacion-main.component.html
+++ b/src/app/ubicaciones/pages/ubicacion-main/ubicacion-main.component.html
@@ -1,4 +1,4 @@
-<div class="row mb-3">
+<div class="row mb-3" *appUserHasRole="[1, 2]">
     <div class="col-md-12">
         <div class="btn-toolbar" role="toolbar">
             <div class="btn-group" role="group" aria-label="First group">
@@ -9,7 +9,7 @@
         </div>
     </div>
 </div>
-<div class="table-responsive">
+<div class="table-responsive" *appUserHasRole="[1, 2]">
     <table datatable [dtOptions]="dtOptions" class="row-border hover table w-100">
         <thead>
             <tr>
@@ -38,6 +38,29 @@
                         </div>
                     </div>
                 </td>
+            </tr>
+        </tbody>
+        <tbody *ngIf="ubicaciones.length === 0">
+            <tr>
+                <td colspan="3" class="no-data-available">No data!</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div class="table-responsive" *appUserHasRole="[3]">
+    <table datatable [dtOptions]="dtOptions" class="row-border hover table w-100">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Anaquel</th>
+                <th>Nivel</th>
+            </tr>
+        </thead>
+        <tbody *ngIf="ubicaciones.length !== 0">
+            <tr *ngFor="let ubicacion of ubicaciones; let i = index;">
+                <td> {{ i + 1 }} </td>
+                <td>{{ ubicacion.anaquel }}</td>
+                <td>{{ ubicacion.nivel }}</td>
             </tr>
         </tbody>
         <tbody *ngIf="ubicaciones.length === 0">
